--- a/lab2/es1/Cargo.toml
+++ b/lab2/es1/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "es"
+name = "es1"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand= "0.8.5"
+byteorder = "1.4.3"
+rand = "0.8.5"
